# jx

./: main.py  notes.md  pyproject.toml  pytest.ini
design/: composable_transformation.md  fsdp.md  fsdp_but_equinox.md  map_transformation.md  pipelining.md  problem with equinox nn_var.md  torch_fsdp.md
jx/: __init__.py  _darray.py  shard_map.py
jx/distributed/: _fsdp.py  _tp.py  _utils.py
jx/layer/: __init__.py  _linear.py
jx/models/bert/: __init__.py  modeling_bert.py
jx/models/modernbert/: modeling_modern_bert.py
jx/nn/: __init__.py  _dropout.py  _embedding.py  _functional.py  _layernorm.py  _linear.py  _transformation.py
legacy/: type_to_type_transformation.py
temp/: test_eval_shape.py  test_fsdp.py  test_fsdp2.py  test_grad.py  test_hallo.py  test_iter_class.py  test_itermodule.py  test_linear.py  test_map_itself.py  test_map_variables.py  test_tensor.py  test_using_scan.py
temp/bert/: rng.py  test_bert_embedding.py
test/: model_bert.py  test_model_bert.py
