[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chex>=0.1.90",
    "equinox>=0.12.2",
    "jax[tpu]>=0.7",
    "jaxtyping>=0.3.2",
    "transformers>=4.54.0",
]

[project.optional-dependencies]
dev = [
    "torch>=2.0.0",
]


[tool.ruff]
extend-include = ["*.ipynb"]
src = ["jx"]

[tool.ruff.lint]
fixable = ["I001", "F401", "UP"]
ignore = ["E402", "E721", "E731", "E741", "F722", "UP038", "E501"]
select = ["E", "F", "I001", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
order-by-type = false

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[dependency-groups]
dev = [
    "markupsafe==2.1.3",
    "torch>=2.8.0",
]
